Undefined behaviour in HotSpot

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8, 9
    • Component/s: hotspot
    • None
    • b103
    • generic

        In many places, particularly C2, there are instances of undefined behaviour as per the C++ language standard. Some of this is innocuous but some of it may cause miscompilation, leaning to crashes and mysterious bugs.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: