8145096: Undefined behaviour in HotSpot

Fix some integer overflows

Reviewed-by: jrose, kvn, kbarrett, adinn, iklam